--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
             - ./mnt/logs:/var/www/logs
         ports:
             - 8080:80
+        restart: unless-stopped
 
     mysql:
         image: mysql:5.6
@@ -22,3 +23,4 @@ services:
             - ./mnt/mysql:/var/lib/mysql
         ports:
             - 3307:3306
+        restart: unless-stopped
