--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,18 @@ services:
             - ./src:/var/www/html
             - ./mnt/logs:/var/www/logs
         ports:
-            - 8080:80
-        restart: unless-stopped
+            - ${WEB_PORT}:80
+        restart: ${WEB_RESTART}
 
     mysql:
         image: mysql:5.6
         environment:
-              MYSQL_ROOT_PASSWORD: password
-              MYSQL_DATABASE: database
+              MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+              MYSQL_DATABASE: ${MYSQL_DATABASE}
+              MYSQL_USER: ${MYSQL_USER}
+              MYSQL_PASSWORD: ${MYSQL_PASSWORD}
         volumes:
             - ./mnt/mysql:/var/lib/mysql
         ports:
-            - 3307:3306
-        restart: unless-stopped
+            - ${MYSQL_PORT}:3306
+        restart: ${MYSQL_RESTART}
