--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
         volumes:
             - ./src:/var/www/html
             - ./mnt/logs:/var/www/logs
+            - ./mnt/php/php.ini:/usr/local/etc/php/php.ini
         ports:
             - ${WEB_PORT}:80
         restart: ${WEB_RESTART}
