Improve Docker setup
- Changes directory structure
- Adds scripts for exporting docker images for production

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+COMPOSE_PROJECT_NAME=projectname
+
 # WEB
-WEB_PORT=8080
+WEB_IMAGE=user/image:####WEB_IMAGE_HASH####
+WEB_PORT=8888
 WEB_RESTART=unless-stopped
 
 # MYSQL
