--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,11 @@ version: '2'
 
 services:
     web:
-        build: .
+        image: ${WEB_IMAGE}
         depends_on:
             - mysql
         links:
             - mysql
-        volumes:
-            - ./src:/var/www/html
-            - ./mnt/logs:/var/www/logs
-            - ./mnt/php/php.ini:/usr/local/etc/php/php.ini
-            - ./mnt/apache2/conf-enabled/vhosts.conf:/etc/apache2/conf-enabled/vhosts.conf
-            - ./mnt/apache2/vhosts/:/etc/apache2/vhosts/
         ports:
             - ${WEB_PORT}:80
         restart: ${WEB_RESTART}
@@ -24,8 +18,6 @@ services:
               MYSQL_DATABASE: ${MYSQL_DATABASE}
               MYSQL_USER: ${MYSQL_USER}
               MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-        volumes:
-            - ./mnt/mysql:/var/lib/mysql
         ports:
             - ${MYSQL_PORT}:3306
         restart: ${MYSQL_RESTART}
