--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,8 +2,8 @@ version: '2'
 
 services:
     web:
+        image: ${WEB_IMAGE}
         volumes:
 
     mysql:
         volumes:
-            - ../_data/mysql:/var/lib/mysql
