--- a/web/Dockerfile-dev
+++ b/web/Dockerfile-dev
@@ -32,3 +32,9 @@ RUN pecl install xdebug && \
     sed -i '1 a xdebug.remote_host=10.254.254.254 ' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini && \
     sed -i '1 a xdebug.remote_port=9000' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini && \
     sed -i '1 a xdebug.remote_enable=1' /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
+# Install wget for composer install script support
+RUN apt-get update && apt-get install -y --fix-missing \
+    wget \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
